contact.component mobile edit & delete button fixed

--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -1,16 +1,38 @@
 <section>
+  @if(!selectedContact) {
   <div class="new_contact_mobile_icon" (click)="openOverlay('add')">
     <img src="assets/img/icons/person_add_icon.svg" alt="">
   </div>
+  }
+  @if(selectedContact) {
+  <div class="new_contact_mobile_icon" (click)="openOverlayEditContactMobile('edit')">
+    <img src="assets/img/icons/edit_vert_icon.svg" alt="">
+  </div>
+  }
+
+  <!-- Overlay für Editieren und Löschen von Kontakt -->
+  @if(isOverlayVisible) {
+    <div class="parent-overlay-container" (click)="closeOverlay()">
+      <div class="overlay">
+        <div class="overlay-content" (click)="$event.stopPropagation()">
+          <div (click)="editContact()">
+            <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg" />
+            <p>Edit</p>
+          </div>
+    
+          <div (click)="deleteContact()">
+            <img class="trash_icon" src="assets/img/icons/trash_icon.svg" />
+            <p>Delete</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  }
   <div class="contact-list">
     <div class="list">
       <button class="add-new-contact" (click)="openOverlay('add')">
         <span>Add new Contact</span>
-        <img
-          class="person_add_icon"
-          src="assets/img/icons/person_add_icon.svg"
-          alt=""
-        />
+        <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
       </button>
       @for (group of contactService.getGroupedContacts() | keyvalue; track
       $index) {
@@ -19,17 +41,11 @@
           {{ group.key }}
         </div>
         @for (contact of group.value; track $index) {
-        <div
-          class="single-contact-container"
-          (click)="selectContact(contact); mobileDisplay()"
-          [class.active]="selectedContact?.id === contact.id"
-        >
-          <div
-            class="profile_badge"
-            [ngStyle]="{
+        <div class="single-contact-container" (click)="selectContact(contact); mobileDisplay()"
+          [class.active]="selectedContact?.id === contact.id">
+          <div class="profile_badge" [ngStyle]="{
               'background-color': getBadgeColor(getIndexInFullList(contact))
-            }"
-          >
+            }">
             {{ contact.initials }}
           </div>
           <div class="info">
@@ -40,18 +56,15 @@
         }
       </div>
       }
-    </div>    
-  </div>  
+    </div>
+  </div>
   <div class="contacts" [class.isShown]="isShown">
     <div class="headline">
       <div>
         <h1>Contacts</h1>
         @if(selectedContact) {
-        <img
-          class="arrow_left"
-          src="assets/img/icons/arrow_left.svg"
-          (click)="selectContact(selectedContact); mobileDisplay()"
-        />
+        <img class="arrow_left" src="assets/img/icons/arrow_left.svg"
+          (click)="selectContact(selectedContact); mobileDisplay()" />
         }
       </div>
 
@@ -63,14 +76,11 @@
     <!-- <img class="arrow_left" src="assets/img/icons/arrow_left.svg" (click)="selectContact(selectedContact); mobileDisplay()"> -->
     <div class="contact_content" [ngClass]="{ show: showContactContent }">
       <div class="contact_content_head">
-        <div
-          class="contact_profile_badge"
-          [ngStyle]="{
+        <div class="contact_profile_badge" [ngStyle]="{
             'background-color': getBadgeColor(
               getIndexInFullList(selectedContact)
             )
-          }"
-        >
+          }">
           {{ selectedContactInitials }}
         </div>
         <div class="contact_name_section">
@@ -79,19 +89,13 @@
             <!-- <div (click)="updateContact()" class="edit"> -->
             <div (click)="openOverlay('edit')" class="edit">
               <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg" />
-              <img
-                class="pencil_icon_hover_blue"
-                src="assets/img/icons/pencil_icon_hover_blue.svg"
-              />
+              <img class="pencil_icon_hover_blue" src="assets/img/icons/pencil_icon_hover_blue.svg" />
               <p>Edit</p>
             </div>
 
             <div (click)="deleteContact()" class="delete">
               <img class="trash_icon" src="assets/img/icons/trash_icon.svg" />
-              <img
-                class="trash_icon_hover_blue"
-                src="assets/img/icons/trash_icon_hover_blue.svg"
-              />
+              <img class="trash_icon_hover_blue" src="assets/img/icons/trash_icon_hover_blue.svg" />
               <p>Delete</p>
             </div>
           </div>
@@ -126,8 +130,7 @@
 <app-overlay></app-overlay>
 
 @if (showSuccessMessage) {
-  <div class="success-message">
-    Contact successfully created
-  </div>
+<div class="success-message">
+  Contact successfully created
+</div>
 }
-
