added: transition for burger overlay

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -15,7 +15,7 @@
     </div>
     <div
       id="overlay"
-      [ngClass]="{ d_none: overlayState }"
+      [class.open]="isOpen"
       class="header_overlay"
     >
       <div class="inner_overlay">
