--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -84,7 +84,14 @@ img {
 
 /* Burger-Overlay */
 
-
+.toggleOff_container {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 15;
+}
 
 .header_overlay {
     position: fixed;
