fixed: profile badge

--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -96,6 +96,7 @@ section {
                     border-radius: 50%;
                     @include font($fs: 12px, $fw: 400);
                     color: $white;
+                    min-width: 42px;
                 }
 
                 .info {
