--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -366,6 +366,16 @@ section {
     }
 }
 
+@media (max-width: 1100px) {
+    .contact-list {
+        width: 45%;        
+    }
+
+    .contacts {
+        width: 55%;
+    }
+}
+
 @media (max-width: 1024px) {
     section {
         @include dFlex($ai: flex-start);
