fixed: header image error

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="header_left">
-    <img class="responsive_header_logo" src="./../../../assets/img/icons/logo_desktop.svg" alt="">
+    <img class="responsive_header_logo" src="assets/img/icons/logo_desktop.svg" alt="">
     <h1>Kanban Project Management Tool</h1>
   </div>
   <div class="header_right">
