fixed: header logo img css

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -29,8 +29,8 @@ section {
 img {
     display: none;
     position: absolute;
-    top: 32;
-    left: 64;
+    top: 32px;
+    left: 64px;
     height: 39px;
     width: 32px;
 }
